--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -6,43 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<h1>Form with GET</h1>
-<form action="/hello">
-    <label for="name">Name:</label><br>
-    <input type="text" id="name" name="name" value="John"><br><br>
-    <input type="button" value="Submit" onclick="loadGetMsg()">
-</form>
-<div id="getrespmsg"></div>
-
-<script>
-    function loadGetMsg() {
-        let nameVar = document.getElementById("name").value;
-        const xhttp = new XMLHttpRequest();
-        xhttp.onload = function() {
-            document.getElementById("getrespmsg").innerHTML =
-            this.responseText;
-        }
-        xhttp.open("GET", "/hello?name="+nameVar);
-        xhttp.send();
-    }
-</script>
-
-<h1>Form with POST</h1>
-<form action="/hellopost">
-    <label for="postname">Name:</label><br>
-    <input type="text" id="postname" name="name" value="John"><br><br>
-    <input type="button" value="Submit" onclick="loadPostMsg(postname)">
+<h1>ChatGPT</h1>
+<form>
+    <input type="text" id="instruction" name="name"><br><br>
+    <input type="button" value="Submit" onclick="query(instruction)">
 </form>
 
-<div id="postrespmsg"></div>
+<div id="resp"></div>
 
 <script>
-    function loadPostMsg(name){
-        let url = "/hellopost?name=" + name.value;
+    function query(instruction){
+        let url = "/consulta?comando=" + instruction.value;
 
-        fetch (url, {method: 'POST'})
-            .then(x => x.text())
-            .then(y => document.getElementById("postrespmsg").innerHTML = y);
+        fetch (url, {method: 'GET'})
+            .then(x => x.json())
+            .then(y => {
+                let p = document.createElement('p');
+                for(let i in y){
+                    p.textContent += "{" + i + ": " + y[i] + "}";
+                }
+                document.getElementById("resp").appendChild(p);
+            });
     }
 </script>
 </body>
